--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,6 +654,10 @@ header #goToTop:hover span {
 .hamburger span {
   font-weight: 300;
 }
+.hamburger .ham-btn {
+  z-index: 100;
+  display: flex;
+}
 .hamburger .hamburger-list {
   display: none;
   position: fixed;
@@ -671,6 +675,9 @@ header #goToTop:hover span {
   padding: 0;
   font-family: Source Sans Pro;
 }
+.hamburger .hamburger-list .list-items.first-ul {
+  display: none;
+}
 .hamburger .hamburger-list .list-items .item {
   color: #f4f4f4;
   margin: 1.5rem 0;
@@ -684,6 +691,15 @@ header #goToTop:hover span {
 }
 .hamburger .hamburger-list .list-items .item .sub-items .sub-item {
   margin: 0.5rem 0;
+}
+.hamburger .hamburger-list .list-items .item .sub-items .sub-item span {
+  background-color: #d9534f;
+  padding: 0.2em 0.6em 0.3em;
+  font-size: 75%;
+  font-weight: bold;
+  line-height: 1;
+  text-align: center;
+  border-radius: 0.25em;
 }
 .hamburger .hamburger-list .list-items .animate {
   position: relative;
@@ -701,6 +717,9 @@ header #goToTop:hover span {
   width: 100%;
   height: 1px;
   opacity: 0.2;
+}
+.hamburger .hamburger-list .border-list.first-border {
+  display: none;
 }
 .hamburger .hamburger-list .info {
   padding-top: 3rem;
