--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -371,6 +371,10 @@ header {
     span {
         font-weight: 300;
     }
+    .ham-btn {
+        z-index: 100;
+        display: flex;
+    }
     .hamburger-list {
         display: none;
         position: fixed;
@@ -382,6 +386,9 @@ header {
         overflow-y: scroll;
         padding: 2rem;
         .list-items {
+            &.first-ul {
+                display: none;
+            }
             list-style: none;
             margin: 0;
             padding: 0;
@@ -397,6 +404,15 @@ header {
                     border-left: 1px solid map-get($color_pallets, 'light');
                     .sub-item {
                         margin: 0.5rem 0;
+                        span {
+                            background-color: map-get($color_pallets, 'new');
+                            padding: 0.2em 0.6em 0.3em;
+                            font-size: 75%;
+                            font-weight: bold;
+                            line-height: 1;
+                            text-align: center;
+                            border-radius: 0.25em;
+                        }
                     }
                 }
             }
@@ -413,6 +429,9 @@ header {
             }
         }
         .border-list {
+            &.first-border {
+                display: none;
+            }
             background-color: map-get($color_pallets, 'light');
             width: 100%;
             height: 1px;
