--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -387,29 +387,32 @@ header {
         z-index: 100;
         display: flex;
         position: relative;
-        transition: right 0.5s ease;
+        right: 0;
+        transition: right 0.2s ease-out;
         &.active {
             position: fixed;
-            right: 13rem;
             padding: 0.5rem 1rem;
+            right: 12rem;
             background-color: map-get($color_pallets, 'dark');
-            transition: right 0.5s ease;
+            transition: all 0.5s ease-out;
         }
     }
     .hamburger-list {
-        display: none;
+        visibility: hidden;
         position: fixed;
         top: 0;
         bottom: 0;
-        left: 100%;
+        right: -20rem;
         width: 20rem;
         background-color: map-get($color_pallets, 'dark');
         overflow-y: scroll;
         padding: 2rem;
         padding-top: 5rem;
+        transition: all 0.3s ease-out;
         &.active {
-            display: block;
-            left: calc(100% - 20rem);
+            visibility: visible;
+            right: 0;
+            transition: right 0.6s ease-out;
         }
         .list-items {
             &.first-ul {
@@ -508,10 +511,12 @@ header {
 .left-for-menu {
     position: relative;
     right: 0;
-    left: 0;
+    left: auto;
+    transition: all 0.3s ease-out;
     &.active {
         right: 20rem;
         left: auto;
+        transition: all 0.6s ease-out;
     }
 }
 
