--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -768,7 +768,7 @@ header #goToTop:hover span {
 .lines .line {
   position: absolute;
   width: 100%;
-  height: 1px;
+  height: 0.08rem;
   background-color: #f4f4f4;
   border-radius: 0.2px;
   transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.5ms;
