--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -484,7 +484,7 @@ header {
     .line {
         position: absolute;
         width: 100%;
-        height: 1px;
+        height: 0.08rem;
         background-color: map-get($color_pallets, 'light');
         border-radius: 0.2px;
         transition: all cubic-bezier(0.26, 0.1, 0.27, 1.55) 0.5ms;
